Ext-V5 add confrim berths are allowed

--- a/Auto Order/src/Check.html
+++ b/Auto Order/src/Check.html
@@ -82,6 +82,10 @@
                 <p><strong>Destination:</strong> <span id="destination"></span></p>
                 <p><strong>Date:</strong> <span id="date"></span></p>
                 <p><strong>Class:</strong> <span id="class"></span></p>
+                <p><strong>Book only if confirm birth is alloted:</strong> <span id="class">
+                <input type="checkbox" id="confirmBirth" name="confirmBirth">
+                </span></p>
+                
             </div>
 
             <div class="passenger-details">
