Ext-V7 added UPI payment support

--- a/Auto Order/src/Check.html
+++ b/Auto Order/src/Check.html
@@ -71,6 +71,7 @@
                     <th>Delete</th>
                 </tr>
             </table>
+            <h3>Select Passenger for traval </h3>
             <input type="submit" value="Submit" id="submitBtn">
         </div>
     </div>
@@ -96,26 +97,47 @@
             </div>
         </div>    
     </div>
+    <div class="container">
  <div class="passenger-details">
             <h2>Payment Details</h2>
 
-            <div class="travel-details">
-                <strong><label for="bhimCheckbox">Click on BHIM UPI payment:</label></strong>
-                <input type="checkbox" id="bhimCheckbox" name="bhimCheckbox">
+            <div class="form-group">
+                <strong><label for="bhimCheckbox">Click on BHIM UPI payment:</label> <input type="checkbox" id="bhimCheckbox" name="bhimCheckbox"> </strong>
+                
             </div>
 
-            <div class="travel-details">
+            <div class="form-group">
                 <strong><label for="upiAddress">UPI Address:</label></strong>
                 <input type="text" id="upiAddress" name="upiAddress" placeholder="Enter your UPI address">
             </div>
 
-            <div class="travel-details">
+            <div class="form-group">
                 <strong><label for="Save Payment Details">Save Payment Details:</label></strong>
                 <button id="savePaymentDetails">Save</button>
-            </div>
-        </div>
+         
+        </div>   
+         </div>
+</div>
 
-    <h4>*All collected data will saved in the browser only</h4>
+<div class="custom-container">  
+    <div class="custom-form-group">
+      <h3 class="custom-heading">How to use Extension:</h3>         
+      <ol class="custom-list">
+        <li class="custom-list-item">Add Passenger Data</li>
+        <li class="custom-list-item">Select Passenger for travels</li>
+        <li class="custom-list-item">Set Travels Details from IRCTC Website</li>
+        <li class="custom-list-item">Whenever you want to book, go to the IRCTC website and select the Travel Button</li>
+        <li class="custom-list-item">Select your train</li>
+        <li class="custom-list-item">Fill captcha whenever required</li>
+      </ol>
+    </div>
+  </div>
+
+<h4>Warrning: This extension is only for the personal use</h4>
+    <h4>*Note- All collected data will be saved into the browser storage area, Extension don't use your any kind of data for any purpose, This Extension can open custom cashkaro link for the Amazon website. <br>
+    <a href="https://chromewebstore.google.com/detail/auto-order/dapjoiijdlpiegcfcoaabnjdenmkncbc">Click Here</a> to give your feedback or suggetion to enhance this extension.<br>
+    we can add any custom feature on request.
+    </h4>
     <script src="script.js"></script>
 </body>
 </html>
