Ext-V8 Fixed UPI payment issue
 Ext-V8 Fixed UPI payment issue

--- a/Auto Order/src/Check.html
+++ b/Auto Order/src/Check.html
@@ -107,8 +107,9 @@
             </div>
 
             <div class="form-group">
-                <strong><label for="upiAddress">UPI Address:</label></strong>
+                <strong><label for="upiAddress">UPI Address:</label></strong> 
                 <input type="text" id="upiAddress" name="upiAddress" placeholder="Enter your UPI address">
+                <p for="upiAddress">Example: 9876543210@ybl</p>
             </div>
 
             <div class="form-group">
